--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "hexo-generator-tag": "^2.0.0",
     "hexo-pagination": "^4.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^7.0.0",
+    "hexo-renderer-markdown-it": "^7.1.1",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0",
+    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-expandable": "^1.0.2",
+    "markdown-it-imsize": "^2.0.1",
+    "markdown-it-regexp": "^0.4.0",
+    "markdown-it-task-checkbox": "^1.0.6",
     "moment": "^2.30.1",
     "opentype.js": "^1.3.4"
   }
